--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tanstack/react-query-devtools": "^5.59.15",
     "@tanstack/react-router": "^1.74.0",
     "@tanstack/react-table": "^8.20.5",
+    "@types/date-fns": "^2.6.3",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
