--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.10",
     "lucide-react": "^0.453.0",
     "luxon": "^3.5.0",
