--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cmdk": "^0.2.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.10",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.453.0",
     "luxon": "^3.5.0",
     "qrcode.react": "^4.1.0",
