--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/selection-mode": "^3.12.0",
+    "@react-pdf-viewer/toolbar": "^3.12.0",
     "@tabler/icons-react": "^3.2.0",
     "@tanstack/react-query": "^5.59.15",
     "@tanstack/react-query-devtools": "^5.59.15",
@@ -45,6 +49,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.453.0",
     "luxon": "^3.5.0",
+    "pdfjs-dist": "^4.8.69",
     "qrcode.react": "^4.1.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
