--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-jwt": "^1.2.2",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.22.3",
     "react-syntax-highlighter": "^15.5.0",
     "recharts": "^2.12.5",
