--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-hook-form": "^7.51.3",
     "react-jwt": "^1.2.2",
     "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.4.10",
     "react-router-dom": "^6.22.3",
     "react-syntax-highlighter": "^15.5.0",
     "recharts": "^2.12.5",
